--- a/administrator/templates/atum/scss/blocks/_global.scss
+++ b/administrator/templates/atum/scss/blocks/_global.scss
@@ -91,16 +91,16 @@ body .container-main {
   padding-right: 0;
 
   &::before, &::after {
-    content: '';
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    // Note IDE's will consider this file import to fail in SCSS but this is correct for the final compiled CSS file
-    background: var(--background) url("../images/joomla-pattern.svg");
-    background-size: 15rem;
+    // content: '';
+    // width: 100%;
+    // height: 100%;
+    // position: fixed;
+    // top: 0;
+    // left: 0;
+    // z-index: -1;
+    // // Note IDE's will consider this file import to fail in SCSS but this is correct for the final compiled CSS file
+    // background: var(--background) url("../images/joomla-pattern.svg");
+    // background-size: 15rem;
   }
 
   &::after {
